//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Post {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  published Boolean [not null, default: false]
  title String [not null]
  content String
  author User
  authorId String
}

Table Job {
  id String [pk]
  companyId String
  category String [not null]
  title String [not null]
  employmentType String [not null]
  description String [not null]
  location Location
  locationId String
  responsibility String [not null]
  requirements String [not null]
  salaryMin Int [not null]
  salaryMax Int [not null]
  experienceLevel String [not null]
  screeningQuestions String [not null]
  tags String [not null]
  posterDepartment String [not null]
  posterFirstName String [not null]
  posterLastName String [not null]
  posterEmail String [not null]
  posterPhone String [not null]
  status JobStatus [not null]
  finished DateTime [not null]
  externalJobId String
  createdAt DateTime [default: `now()`, not null]
  createdBy String
  updatedAt DateTime [not null]
  updatedBy String
  deletedAt DateTime
  deletedBy String
}

Table Location {
  id String [pk]
  city String [not null]
  latitude Float [not null]
  longitude Float [not null]
  state LocationState
  stateId String
  country LocationCountry
  countryId String
  users User [not null]
  jobs Job [not null]
  createdAt DateTime [default: `now()`, not null]
  createdBy String
  updatedAt DateTime [not null]
  updatedBy String
  deletedAt DateTime
  deletedBy String
}

Table LocationCountry {
  id String [pk]
  name String [not null]
  iso2 String [not null]
  iso3 String [not null]
  locations Location [not null]
  createdAt DateTime [default: `now()`, not null]
  createdBy String
  updatedAt DateTime [not null]
  updatedBy String
  deletedAt DateTime
  deletedBy String
}

Table LocationState {
  id String [pk]
  name String [not null]
  abbreviation String [not null]
  locations Location [not null]
  createdAt DateTime [default: `now()`, not null]
  createdBy String
  updatedAt DateTime [not null]
  updatedBy String
  deletedAt DateTime
  deletedBy String
}

Table Setting {
  id String [pk]
  user User
  userId String
  privateVisibleToAllTalents Boolean [not null]
  privateVisibleToAllCompanies Boolean [not null]
  emailPhoneVisibleToAllTalents Boolean [not null]
  notificationNewConnectionRequest Boolean [not null]
  notificationNewConnectionAccepted Boolean [not null]
  notificationFeedUpdate Boolean [not null]
  createdAt DateTime [default: `now()`, not null]
  createdBy String
  updatedAt DateTime [not null]
  updatedBy String
  deletedAt DateTime
  deletedBy String
}

Table Talent {
  id String [pk]
  user User
  userId String
  website String [not null]
  weight Float [not null]
  weightUnit String [not null]
  height Float [not null]
  heightUnit String [not null]
  birthday DateTime [not null]
  gender Gender [not null]
  jobTitle String [not null]
  interests String [not null]
  biography String [not null]
  skills String [not null]
  industry String [not null]
  profession String [not null]
  ethnicity String [not null]
  availableLocations String [not null]
  languages String [not null]
  unionStatus String [not null]
  createdAt DateTime [default: `now()`, not null]
  createdBy String
  updatedAt DateTime [not null]
  updatedBy String
  deletedAt DateTime
  deletedBy String
}

Table User {
  id String [pk]
  username String
  firstName String
  lastName String
  role Role [default: 'USER']
  email String [unique]
  avatarUrl String
  emailVerified Boolean
  password String
  userType UserType [default: 'Talent']
  provider AuthProvider
  providerId String
  overview String
  facebookUrl String
  linkedinUrl String
  instagramUrl String
  twitterUrl String
  website String
  youtubeUrl String
  companyId String
  talent Talent
  settings Setting
  address String
  phoneNumber String
  accountStatus AccountStatus
  location Location
  locationId String
  coverImage String
  streamJoined Boolean
  sendbirdJoined Boolean
  permissions String
  restorePasswordCode String
  posts Post [not null]
  createdAt DateTime [default: `now()`, not null]
  createdBy String
  updatedAt DateTime [not null]
  updatedBy String
  deletedAt DateTime
  deletedBy String
}

Enum Role {
  ADMIN
  USER
}

Enum AccountStatus {
  Deactivated
  Blocked
  Deleted
  None
}

Enum ApplicationStatus {
  Draft
  Applied
  Declined
  Hired
}

Enum AuthProvider {
  local
  facebook
  google
}

Enum FileType {
  Photo
  Video
  Audio
  Resume
  Other
  ProjectDocument
  Gallery
}

Enum FriendRequestAction {
  Request
  Accept
  Ignore
  Delete
  Follow
}

Enum FriendRequestStatus {
  None
  Pending
  Connected
  Ignored
  Requested
  Deleted
  Following
}

Enum Gender {
  heHim
  sheHer
  theyThem
  ratherNotSay
  notListedSeeBio
}

Enum JobStatus {
  Draft
  Posted
  Hiring
  Finished
  Deleted
}

Enum MentorshipUserType {
  Mentor
  Mentee
  Both
}

Enum PositionStatus {
  Hiring
  Filled
}

Enum ReviewStatus {
  Waiting
  Approved
  Rejected
  Deleted
}

Enum UserCircleStatus {
  None
  Follow
  Join
  Unfollow
  Leave
}

Enum UserType {
  Talent
  Company
  Admin
}

Ref: Post.authorId > User.id

Ref: Job.locationId > Location.id

Ref: Location.stateId > LocationState.id

Ref: Location.countryId > LocationCountry.id

Ref: Setting.userId - User.id

Ref: Talent.userId - User.id

Ref: User.locationId > Location.id